<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.5</version>
        <relativePath/>
    </parent>
    <groupId>com.kantboot</groupId>
    <artifactId>kantboot-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <modules>
        <module>kantboot-util</module>
        <module>kantboot-system</module>
        <module>kantboot-user</module>
        <module>kantboot-functional</module>
        <module>kantboot-starter-parent</module>
        <module>kantboot-api</module>
        <module>kantboot-global</module>
        <module>kantboot-official-plugin</module>
        <module>kantboot-socket</module>
    </modules>

    <properties>
        <revision>0.0.1</revision>

        <java.version>21</java.version>
        <spring-boot.version>3.3.5</spring-boot.version>
        <fastjson2.version>2.0.37</fastjson2.version>
        <hutool.version>5.8.24</hutool.version>
        <fastjson2-extension.version>2.0.9.graal</fastjson2-extension.version>
        <lombok.version>1.18.34</lombok.version>
    </properties>

    <repositories>
        <!-- 使用阿里云的maven仓库 -->
        <repository>
            <id>alibaba</id>
            <url>https://maven.aliyun.com/repository/public</url>
        </repository>
<!--        &lt;!&ndash; 添加自定义的Nexus仓库 &ndash;&gt;-->
<!--        <repository>-->
<!--            <id>maven-releases</id>-->
<!--            <url>https://maven.aaarfyh.com/repository/maven-releases/</url>-->
<!--        </repository>-->
<!--        <repository>-->
<!--            <id>maven-snapshots</id>-->
<!--            <url>https://maven.aaarfyh.com/repository/maven-snapshots/</url>-->
<!--        </repository>-->
    </repositories>

    <!-- 发布时使用的仓库配置 -->
<!--    <distributionManagement>-->
<!--        <repository>-->
<!--            <id>maven-releases</id>-->
<!--            <name>Releases Repository</name>-->
<!--            <url>https://maven.aaarfyh.com/repository/maven-releases/</url>-->
<!--        </repository>-->
<!--        <snapshotRepository>-->
<!--            <id>maven-snapshots</id>-->
<!--            <name>Snapshots Repository</name>-->
<!--            <url>https://maven.aaarfyh.com/repository/maven-snapshots/</url>-->
<!--        </snapshotRepository>-->
<!--    </distributionManagement>-->

    <dependencyManagement>
        <dependencies>
            <!-- lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- hutool -->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>5.8.24</version>
            </dependency>
            <!-- spring-boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-integration</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2-extension</artifactId>
                <version>2.0.9.graal</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <build>
        <plugins>
            <!-- 添加flatten-maven-plugin插件 -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.3.0</version>
                <inherited>true</inherited>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                        <configuration>
                            <!-- 避免IDE将 .flattened-pom.xml 自动识别为功能模块 -->
                            <updatePomFile>true</updatePomFile>
                            <flattenMode>resolveCiFriendliesOnly</flattenMode>
                            <pomElements>
                                <parent>expand</parent>
                                <distributionManagement>remove</distributionManagement>
                                <repositories>remove</repositories>
                            </pomElements>
                        </configuration>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


</project>